creation blog app

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
 				</div>
 			</header><!-- #header -->
 
-            {% block content %}  # 'container' is the name of block
+            {% block content %}  # 'content' is the name of block
 			{% endblock %}
 
 			<!-- start footer Area -->
