--- a/templates/base.html
+++ b/templates/base.html
@@ -62,10 +62,12 @@
 				        <ul class="nav-menu">
 				          <li><a href="{% url 'index' %}">Home</a></li>
 				          <li><a href="{% url 'about' %}">About</a></li>
-				          <li><a href="{% url 'blog_show:home_blog' %}">Blog</a></li>
-
-
-				          </li>
+				          <li class="menu-has-children"><a href="">Blog</a>
+				            <ul>
+				              <li><a href="{% url 'blog_show:home' %}">Blog Home</a></li>
+				              <li><a href="{% url 'blog_show:single' %}">Blog Single</a></li>
+				            </ul>
+				          </li>	
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
 				            	  <li><a href="{% url 'elements' %}">Elements</a></li>
