--- a/templates/base.html
+++ b/templates/base.html
@@ -62,15 +62,13 @@
 				        <ul class="nav-menu">
 				          <li><a href="{% url 'index' %}">Home</a></li>
 				          <li><a href="{% url 'about' %}">About</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
-				            <ul>
-				              <li><a href="{% url 'blog_show:home' %}">Blog Home</a></li>
-				              <li><a href="{% url 'blog_show:single' %}">Blog Single</a></li>
-				            </ul>
-				          </li>	
+				          <li><a href="{% url 'blog_show:home_blog' %}">Blog</a></li>
+
+
+				          </li>
 				          <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
-				            	  <li><a href="{% url 'elements' %}">Elements</a></li>
+				            	  
 						          <li class="menu-has-children"><a href="">Level 2 </a>
 						            <ul>
 						              <li><a href="#">Item One</a></li>
