--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -85,29 +85,29 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 posts-list">
-							{% for item in post_filtered %}
+							{% for item in filter_post %}
 							<div class="single-post row">
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
-										<li><a href="#">Food,</a></li>
-										<li><a href="#">Technology,</a></li>
-										<li><a href="#">Politics,</a></li>
-										<li><a href="#">Lifestyle</a></li>
+										{% for cat in item.category_list.all %}
+					<!-- or 'cat' -->   	{{cat.name}} {% if not forloop.last %} , {% endif %}
+										{% endfor%}
+									<!-- we can use: {{ item.category.all|join:", " }} instead of line 92,93.94 -->
 									</ul>
 									<div class="user-details row">
-										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-										<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{item.published_date}}</a> <span class="lnr lnr-calendar-full"></span></p>
+										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{item.author}}</a> <span class="lnr lnr-user"></span></p>
+										<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{item.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 										<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{item.counted_views}} Views</a> <span class="lnr lnr-eye"></span></p>
 										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
 									</div>
 								</div>
 								<div class="col-lg-9 col-md-9 ">
 									<div class="feature-img">
-										<img class="img-fluid" src=" {% static 'img/blog/feature-img1.jpg' %}" alt="">
+										<img class="img-fluid" src=" {{item.image.url}}" alt="">
 									</div>
 									<a class="posts-title" href="{% url 'blog_show:single_blog' pid=item.id %}"><h3>{{item.title}}</h3></a>
 									<p class="excert">
-										{{item.content}}
+										{{item.content|truncatewords:15}}
 									</p>
 									<a href="{% url 'blog_show:single_blog' pid=item.id %}" class="primary-btn">View More</a>
 								</div>
@@ -145,22 +145,7 @@
 			                            <button type="submit"><i class="fa fa-search"></i></button>
 			                        </form>
 								</div>
-								<div class="single-sidebar-widget user-info-widget">
-									<img src=" {% static 'img/blog/user-info.png' %}" alt="">
-									<a href="#"><h4>Charlie Barber</h4></a>
-									<p>
-										Senior blog writer
-									</p>
-									<ul class="social-links">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-github"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-									</ul>
-									<p>
-										Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.
-									</p>
-								</div>
+									{% include 'blog_items/blog-writer.html' %}
 								<div class="single-sidebar-widget popular-post-widget">
 									<h4 class="popular-title">Popular Posts</h4>
 									<div class="popular-post-list">
