--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -7,9 +7,9 @@
 				<div class="container">				
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
-							<h1 class="text-white">
+							<h2 class="text-white">
 								{{post_obj.title}}
-							</h1>	
+							</h2>
 							<p class="text-white link-nav"><a href="{% url 'index' %}">Home </a>  <span class="lnr lnr-arrow-right"></span><a href="{% url 'blog_show:home_blog' %}">Blog </a> <span class="lnr lnr-arrow-right"></span>{{post_obj.title}}</p>
 						</div>	
 					</div>
@@ -30,14 +30,13 @@
 								</div>
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
-										<li><a href="#">Food,</a></li>
-										<li><a href="#">Technology,</a></li>
-										<li><a href="#">Politics,</a></li>
-										<li><a href="#">Lifestyle</a></li>
+										{% for cat in post_obj.category_list.all %}
+											{{cat.name}} {% if not forloop.last %} , {% endif %}
+										{% endfor%}
 									</ul>
 									<div class="user-details row">
-										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">Mark wiens</a> <span class="lnr lnr-user"></span></p>
-										<p class="date col-lg-12 col-md-12 col-6"><a href="#">12 Dec, 2017</a> <span class="lnr lnr-calendar-full"></span></p>
+										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post_obj.author.get_full_name}}</a> <span class="lnr lnr-user"></span></p>
+										<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post_obj.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 										<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{post_obj.counted_views}} Views</a> <span class="lnr lnr-eye"></span></p>
 										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
 										<ul class="social-links col-lg-12 col-md-12 col-6">
@@ -53,7 +52,7 @@
 									<p class="excert">
 										{{post_obj.content}}
 									</p>
-*								</div>
+								</div>
 
 							</div>
 							<div class="navigation-area">
@@ -67,13 +66,15 @@
 										</div>
 										<div class="detials">
 											<p>Prev Post</p>
-											<a href="#"><h4>Space The Final Frontier</h4></a>
+											{% if prev_obj.exists=False %} {% else %}
+											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><h4>{{prev_obj}}</h4></a>
+											{% endif %}
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
 										<div class="detials">
 											<p>Next Post</p>
-											<a href="#"><h4>Telescopes 101</h4></a>
+											<a href="#"><h4>{{next_obj}}</h4></a>
 										</div>
 										<div class="arrow">
 											<a href="#"><span class="lnr text-white lnr-arrow-right"></span></a>
@@ -211,22 +212,8 @@
 			                            <button type="submit"><i class="fa fa-search"></i></button>
 			                        </form>
 								</div>
-								<div class="single-sidebar-widget user-info-widget">
-									<img src="{% static 'img/blog/user-info.png' %}" alt="">
-									<a href="#"><h4>Charlie Barber</h4></a>
-									<p>
-										Senior blog writer
-									</p>
-									<ul class="social-links">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-github"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-									</ul>
-									<p>
-										Boot camps have its supporters andit sdetractors. Some people do not understand why you should have to spend money on boot camp when you can get. Boot camps have itssuppor ters andits detractors.
-									</p>
-								</div>
+										{% include 'blog_items/blog-writer.html' %}
+
 								<div class="single-sidebar-widget popular-post-widget">
 									<h4 class="popular-title">Popular Posts</h4>
 									<div class="popular-post-list">
