--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
+{% load blog_tags %}
 			<!-- start banner Area -->
 			<section class="banner-area relative blog-home-banner" id="home">	
 				<div class="overlay overlay-bg"></div>
@@ -146,47 +147,9 @@
 			                        </form>
 								</div>
 									{% include 'blog_items/blog-writer.html' %}
-								<div class="single-sidebar-widget popular-post-widget">
-									<h4 class="popular-title">Popular Posts</h4>
-									<div class="popular-post-list">
-										<div class="single-post-list d-flex flex-row align-items-center">
-											<div class="thumb">
-												<img class="img-fluid" src=" {% static 'img/blog/pp1.jpg' %}" alt="">
-											</div>
-											<div class="details">
-												<a href="blog-single.html"><h6>Space The Final Frontier</h6></a>
-												<p>02 Hours ago</p>
-											</div>
-										</div>
-										<div class="single-post-list d-flex flex-row align-items-center">
-											<div class="thumb">
-												<img class="img-fluid" src=" {% static 'img/blog/pp2.jpg' %}" alt="">
-											</div>
-											<div class="details">
-												<a href="blog-single.html"><h6>The Amazing Hubble</h6></a>
-												<p>02 Hours ago</p>
-											</div>
-										</div>
-										<div class="single-post-list d-flex flex-row align-items-center">
-											<div class="thumb">
-												<img class="img-fluid" src=" {% static 'img/blog/pp3.jpg' %}" alt="">
-											</div>
-											<div class="details">
-												<a href="blog-single.html"><h6>Astronomy Or Astrology</h6></a>
-												<p>02 Hours ago</p>
-											</div>
-										</div>
-										<div class="single-post-list d-flex flex-row align-items-center">
-											<div class="thumb">
-												<img class="img-fluid" src=" {% static 'img/blog/pp4.jpg' %}" alt="">
-											</div>
-											<div class="details">
-												<a href="blog-single.html"><h6>Asteroids telescope</h6></a>
-												<p>02 Hours ago</p>
-											</div>
-										</div>															
-									</div>
-								</div>
+
+									{% latestposts %}
+
 								<div class="single-sidebar-widget ads-widget">
 									<a href="#"><img class="img-fluid" src=" {% static 'img/blog/ads-banner.jpg' %}" alt=""></a>
 								</div>
