--- a/templates/test.html
+++ b/templates/test.html
@@ -22,3 +22,68 @@
             {% show_popularposts %}
 </body>
 </html>
+
+
+
+									<h4 class="category-title">Post Catgories</h4>
+									<ul class="cat-list">
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Technology</p>
+												<p>37</p>
+											</a>
+										</li>
+
+
+									</ul>
+
+<div class="single-sidebar-widget post-category-widget">
+									<h4 class="category-title">Post Catgories</h4>
+									<ul class="cat-list">
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Technology</p>
+												<p>37</p>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Lifestyle</p>
+												<p>24</p>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Fashion</p>
+												<p>59</p>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Art</p>
+												<p>29</p>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Food</p>
+												<p>15</p>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Architecture</p>
+												<p>09</p>
+											</a>
+										</li>
+										<li>
+											<a href="#" class="d-flex justify-content-between">
+												<p>Adventure</p>
+												<p>44</p>
+											</a>
+										</li>
+									</ul>
+								</div>
+div.single-sidebar-widget:nth-child(5)
+/html/body/section[3]/div/div/div[2]/div/div[5]
+html.no-js body section.post-content-area div.container div.row div.col-lg-4.sidebar-widgets div.widget-wrap div.single-sidebar-widget.post-category-widget
