--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -3,28 +3,28 @@
 {% load static %}
 {% load blog_tags %}
 			<!-- start banner Area -->
-			<section class="banner-area relative blog-home-banner" id="home">	
+			<section class="banner-area relative blog-home-banner" id="home">
 				<div class="overlay overlay-bg"></div>
-				<div class="container">				
+				<div class="container">
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content blog-header-content col-lg-12">
 							<h1 class="text-white">
 								Dude You’re Getting
-								a Telescope				
-							</h1>	
+								a Telescope
+							</h1>
 							<p class="text-white">
 								There is a moment in the life of any aspiring astronomer that it is time to buy that first
-							</p>							
-						</div>	
+							</p>
+						</div>
 					</div>
 				</div>
 			</section>
-			<!-- End banner Area -->				  
+			<!-- End banner Area -->
 
 			<!-- Start top-category-widget Area -->
 			<section class="top-category-widget-area pt-90 pb-90 ">
 				<div class="container">
-					<div class="row">		
+					<div class="row">
 						<div class="col-lg-4">
 							<div class="single-cat-widget">
 								<div class="content relative">
@@ -35,7 +35,7 @@
 								  	  </div>
 								      <div class="content-details">
 								        <h4 class="content-title mx-auto text-uppercase">Social life</h4>
-								        <span></span>								        
+								        <span></span>
 								        <p>Enjoy your social life together</p>
 								      </div>
 								    </a>
@@ -52,7 +52,7 @@
 								  	  </div>
 								      <div class="content-details">
 								        <h4 class="content-title mx-auto text-uppercase">Politics</h4>
-								        <span></span>								        
+								        <span></span>
 								        <p>Be a part of politics</p>
 								      </div>
 								    </a>
@@ -75,12 +75,12 @@
 								    </a>
 								</div>
 							</div>
-						</div>												
+						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<!-- End top-category-widget Area -->
-			
+
 			<!-- Start post-content Area -->
 			<section class="post-content-area">
 				<div class="container">
@@ -99,7 +99,7 @@
 										<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{item.author}}</a> <span class="lnr lnr-user"></span></p>
 										<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{item.published_date|date:"d M Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 										<p class="view col-lg-12 col-md-12 col-6"><a href="#">{{item.counted_views}} Views</a> <span class="lnr lnr-eye"></span></p>
-										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>						
+										<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span class="lnr lnr-bubble"></span></p>
 									</div>
 								</div>
 								<div class="col-lg-9 col-md-9 ">
@@ -150,56 +150,12 @@
 
 									{% latestposts %}
 
+									{% cat_of_posts %}
+
 								<div class="single-sidebar-widget ads-widget">
 									<a href="#"><img class="img-fluid" src=" {% static 'img/blog/ads-banner.jpg' %}" alt=""></a>
 								</div>
-								<div class="single-sidebar-widget post-category-widget">
-									<h4 class="category-title">Post Catgories</h4>
-									<ul class="cat-list">
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Technology</p>
-												<p>37</p>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Lifestyle</p>
-												<p>24</p>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Fashion</p>
-												<p>59</p>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Art</p>
-												<p>29</p>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Food</p>
-												<p>15</p>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Architecture</p>
-												<p>09</p>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="d-flex justify-content-between">
-												<p>Adventure</p>
-												<p>44</p>
-											</a>
-										</li>															
-									</ul>
-								</div>	
+
 								<div class="single-sidebar-widget newsletter-widget">
 									<h4 class="newsletter-title">Newsletter</h4>
 									<p>
@@ -217,10 +173,10 @@
 									      </div>
 									    </div>
 									    <a href="#" class="bbtns">Subcribe</a>
-									</div>	
+									</div>
 									<p class="text-bottom">
 										You can unsubscribe at any time
-									</p>								
+									</p>
 								</div>
 								<div class="single-sidebar-widget tag-cloud-widget">
 									<h4 class="tagcloud-title">Tag Clouds</h4>
@@ -238,11 +194,11 @@
 										<li><a href="#">Lifestyle</a></li>
 										<li><a href="#">Adventure</a></li>
 									</ul>
-								</div>								
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<!-- End post-content Area -->
 
