one view with 2 url

--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -91,7 +91,7 @@
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
 										{% for cat in item.category_list.all %}
-					<!-- or 'cat' -->   	{{cat.name}} {% if not forloop.last %} , {% endif %}
+										<li><a href="{% url 'blog_show:category_blog' cat_name=cat.name %}">{{cat.name}}</a> {% if not forloop.last %} , {% endif %}</li>
 										{% endfor%}
 									<!-- we can use: {{ item.category.all|join:", " }} instead of line 92,93.94 -->
 									</ul>
