--- a/statics_asset/css/main.css
+++ b/statics_asset/css/main.css
@@ -3947,6 +3947,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  max-width: 100px;
 }
 
 .single-post-area .navigation-area .nav-right .lnr {
