--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -26,8 +26,8 @@
 							<div class="single-post row">
 								<div class="col-lg-12">
 									<div class="feature-img">
-										<img class="img-fluid" src="{% static 'img/blog/feature-img1.jpg' %}" alt="">
-									</div>									
+										<img class="img-fluid" src="{{post_obj.image.url}}" alt="">
+									</div>
 								</div>
 								<div class="col-lg-3  col-md-3 meta-details">
 									<ul class="tags">
@@ -60,30 +60,35 @@
 								<div class="row">
 									<div class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
 										<div class="thumb">
-											<a href="#"><img class="img-fluid" src="{% static 'img/blog/prev.jpg' %}" alt=""></a>
-										</div>
-										<div class="arrow">
-											<a href="#"><span class="lnr text-white lnr-arrow-left"></span></a>
-										</div>
-										<div class="detials">
-											<p>Prev Post</p>
 
+											{% if prev_obj %}
+
+											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><img class="img-fluid" src="{{prev_obj.image.url}}" alt=""></a>
+											{% endif %}
+										</div>
+
+										<div class="detials">
+
+											{% if prev_obj %}
+											<p>Prev Post</p>
 											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><h4>{{prev_obj}}</h4></a>
 
+											{% endif %}
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
 										<div class="detials">
+
+											{% if next_obj %}
 											<p>Next Post</p>
-
 											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><h4>{{next_obj}}</h4></a>
+											{% endif %}
+										</div>
 
-										</div>
-										<div class="arrow">
-											<a href="#"><span class="lnr text-white lnr-arrow-right"></span></a>
-										</div>
 										<div class="thumb">
-											<a href="#"><img class="img-fluid" src="{% static 'img/blog/next.jpg' %}" alt=""></a>
+											{% if next_obj %}
+											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><img class="img-fluid" src=" {{next_obj.image.url}}" alt=""></a>
+											{% endif %}
 										</div>										
 									</div>									
 								</div>
