--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -140,11 +140,10 @@
 						</div>
 						<div class="col-lg-4 sidebar-widgets">
 							<div class="widget-wrap">
-								<div class="single-sidebar-widget search-widget">
-									<form class="search-form" action="#">
-			                            <input placeholder="Search Posts" name="search" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Posts'" >
-			                            <button type="submit"><i class="fa fa-search"></i></button>
-			                        </form>
+
+								{% include 'blog_items/blog-search.html' %}
+
+								</form>
 								</div>
 									{% include 'blog_items/blog-writer.html' %}
 
