--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -61,36 +61,45 @@
 									<div class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
 										<div class="thumb">
 
-											{% if prev_obj %}
+												{% if prev_obj %}
+											<a href="#"><img class="img-fluid" src="img/blog/prev.jpg" alt=""></a>
 
-											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><img class="img-fluid" src="{{prev_obj.image.url}}" alt=""></a>
-											{% endif %}
+							<!--	<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><img class="img-fluid" src="{{prev_obj.image.url}}" alt=""></a>  -->
+
+
 										</div>
-
+										<div class="arrow">
+											<a href="#"><span class="lnr text-white lnr-arrow-left"></span></a>
+										</div>
 										<div class="detials">
 
-											{% if prev_obj %}
 											<p>Prev Post</p>
-											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><h4>{{prev_obj}}</h4></a>
+											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><h4>< {{prev_obj}}</h4></a>
 
-											{% endif %}
+												{% endif %}
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
 										<div class="detials">
-
-											{% if next_obj %}
 											<p>Next Post</p>
-											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><h4>{{next_obj}}</h4></a>
-											{% endif %}
-										</div>
 
-										<div class="thumb">
 											{% if next_obj %}
-											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><img class="img-fluid" src=" {{next_obj.image.url}}" alt=""></a>
-											{% endif %}
-										</div>										
-									</div>									
+
+											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><h4>{{next_obj}} ></h4></a>
+
+										</div>
+										<div class="arrow">
+											<a href="#"><span class="lnr text-white lnr-arrow-right"></span></a>
+										</div>
+										<div class="thumb">
+											<a href="#"><img class="img-fluid" src="img/blog/next.jpg" alt=""></a>
+
+							<!--	<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><img class="img-fluid" src=" {{next_obj.image.url}}" alt=""></a>  -->
+
+										</div>
+												{% endif %}
+
+									</div>
 								</div>
 							</div>
 							<div class="comments-area">
