pagination in template

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
 				</div>
 			</header><!-- #header -->
 
-            {% block content %}  # 'content' is the name of block
+            {% block content %}  <!-- 'content' is the name of block -->
 			{% endblock %}
 
 			<!-- start footer Area -->
