--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -86,7 +86,7 @@
              <div class="container">
                 <div class="row">
                    <div class="col-lg-8 posts-list">
-                      {% for item in filter_post.object_list %}
+                      {% for item in filter_post %}
                       <div class="single-post row">
                          <div class="col-lg-3  col-md-3 meta-details">
                             <ul class="tags">
@@ -108,7 +108,7 @@
                             </div>
                             <a class="posts-title" href="{% url 'blog_show:single_blog' pid=item.id %}"><h3>{{item.title}}</h3></a>
                             <p class="excert">
-                               {{item.content|truncatewords:15}} {{item.title}}
+                               {{item.content|truncatewords:15}}
                             </p>
                             <a href="{% url 'blog_show:single_blog' pid=item.id %}" class="primary-btn">View More</a>
                          </div>
@@ -116,27 +116,35 @@
                       {% endfor %}
                            <nav class="blog-pagination justify-content-center d-flex">
                                <ul class="pagination">
+                               {% if filter_post.has_previous %}
                                    <li class="page-item">
-                                       <a href="#" class="page-link" aria-label="Previous">
+
+                                       <a href="?page={{ filter_post.previous_page_number }}" class="page-link" aria-label="Previous">
                                            <span aria-hidden="true">
                                                <span class="lnr lnr-chevron-left"></span>
                                            </span>
                                        </a>
                                    </li>
-                                   <li class="page-item"><a href="#" class="page-link">01</a></li>
-                                   <li class="page-item active"><a href="#" class="page-link">02</a></li>
-                                   <li class="page-item"><a href="#" class="page-link">03</a></li>
-                                   <li class="page-item"><a href="#" class="page-link">04</a></li>
-                                   <li class="page-item"><a href="#" class="page-link">09</a></li>
+                               {% endif %}
+                               {% for i in filter_post.paginator.page_range %}
+                                   {% if filter_post.number == i %}
+                                            <li class="page-item active"><a href="?page={{i}}" class="page-link">{{i}}</a></li>
+                                   {% else %}
+                                            <li class="page-item"><a href="?page={{i}}" class="page-link">{{i}}</a></li>
+                                   {% endif %}
+                               {% endfor %}
+                                   {% if filter_post.has_next %}
                                    <li class="page-item">
-                                       <a href="#" class="page-link" aria-label="Next">
+                                       <a href="?page={{filter_post.next_page_number }}" class="page-link" aria-label="Next">
                                            <span aria-hidden="true">
                                                <span class="lnr lnr-chevron-right">{{item.title}}</span>
                                            </span>
                                        </a>
                                    </li>
+                              {% endif %}
                                </ul>
                            </nav>
+
                    </div>
                    <div class="col-lg-4 sidebar-widgets">
                       <div class="widget-wrap">
@@ -203,3 +211,22 @@
 
 {% endblock %}
 
+<!--
+    <div class="pagination">
+    <span class="step-links">
+            {% if filter_post.has_previous %}
+            <a href="?page=1">&laquo; first</a>   # for going to first page
+            <a href="">previous</a>
+            {% endif %}
+        <span class="current">
+            Page {{ filter_post.number }} of {{ filter_post.paginator.num_pages }} # for showing page x of y
+
+        </span>
+
+        {% if filter_post.has_next %}
+            <a href="?page={{filter_post.next_page_number }}">next</a>
+            <a href="?page={{filter_post.paginator.num_pages }}">last &raquo;</a>  # for going to first page
+        {% endif %}
+    </span>
+</div>
+            -->
