--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -61,11 +61,8 @@
 									<div class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center">
 										<div class="thumb">
 
-												{% if prev_obj %}
-											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><img class="img-fluid" src="{{prev_obj.image.url}}" alt=""></a>
-
-							<!--	<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><img class="img-fluid" src="{{prev_obj.image.url}}" alt=""></a>  -->
-
+												{% if prev_post %}
+											<a href="{% url 'blog_show:single_blog' pid=prev_post.id %}"><img class="img-fluid" src="{{prev_post.image.url}}" alt=""></a>
 
 										</div>
 										<div class="arrow">
@@ -74,7 +71,7 @@
 										<div class="detials">
 
 											<p>Prev Post</p>
-											<a href="{% url 'blog_show:single_blog' pid=prev_obj.id %}"><h4>< {{prev_obj}}</h4></a>
+											<a href="{% url 'blog_show:single_blog' pid=prev_post.id %}"><h4>< {{prev_post}}</h4></a>
 
 												{% endif %}
 										</div>
@@ -82,20 +79,19 @@
 									<div class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center">
 										<div class="detials">
 
-										{% if next_obj %}
+										{% if next_post %}
 
 											<p>Next Post</p>
-											
-											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><h4>{{next_obj}} ></h4></a>
+
+											<a href="{% url 'blog_show:single_blog' pid=next_post.id %}"><h4>{{next_post}} ></h4></a>
 
 										</div>
 										<div class="arrow">
 											<a href="#"><span class="lnr text-white lnr-arrow-right"></span></a>
 										</div>
 										<div class="thumb">
-											<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><img class="img-fluid" src="{{next_obj.image.url}}" alt=""></a>
+											<a href="{% url 'blog_show:single_blog' pid=next_post.id %}"><img class="img-fluid" src="{{next_post.image.url}}" alt=""></a>
 
-							<!--	<a href="{% url 'blog_show:single_blog' pid=next_obj.id %}"><img class="img-fluid" src=" {{next_obj.image.url}}" alt=""></a>  -->
 
 										</div>
 												{% endif %}
