--- a/templates/blog_items/blog-home.html
+++ b/templates/blog_items/blog-home.html
@@ -155,7 +155,7 @@
                          </div>
                             {% include 'blog_items/blog-writer.html' %}
 
-                            {% latestposts %}
+                            {% most_visited_posts 4 %}
 
                             {% cat_of_posts %}
 
