--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -221,14 +221,16 @@
 						<div class="col-lg-4 sidebar-widgets">
 							<div class="widget-wrap">
 								<div class="single-sidebar-widget search-widget">
-									<form class="search-form" action="#">
-			                            <input placeholder="Search Posts" name="search" type="text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Posts'" >
-			                            <button type="submit"><i class="fa fa-search"></i></button>
+									<form class="search-form" action="search/">
+
+										{% include 'blog_items/blog-search.html' %}
 			                        </form>
 								</div>
 										{% include 'blog_items/blog-writer.html' %}
 
-										{% latestposts 4 %}
+
+
+										{% most_visited_posts 4 %}
 
 								</div>
 								<div class="single-sidebar-widget ads-widget">
