--- a/templates/base.html
+++ b/templates/base.html
@@ -87,6 +87,8 @@
             {% block content %}  <!-- 'content' is the name of block -->
 			{% endblock %}
 
+			{% block message %}
+			{% endblock %}
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
