--- a/templates/contact.html
+++ b/templates/contact.html
@@ -76,18 +76,20 @@
 									</div>
 								</div>
 							</form>
-							{% if messages %}
-								<ul class="messages">
-									{% for message in messages %}
-									<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-									{% endfor %}
-								</ul>
-							{% endif %}
+{% endblock %}
+							{% block message %}
 
+							<script>
+
+								alert("Your ticket submitted successfully!");
+
+								alert( {{message}} );
+
+							</script>
+							{% endblock %}
 						</div>
 					</div>
 				</div>	
 			</section>
 			<!-- End contact-page Area -->
 
-{% endblock %}
