--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,12 @@
 			  		<div class="row align-items-center">
 			  			<div class="col-lg-6 col-sm-6 col-6 header-top-left">
 			  				<ul>
-			  					<li><a href="#">Visit Us</a></li>
-			  					<li><a href="#">Buy Tickets</a></li>
+								{% if request.user.is_authenticated %}
+			  					<li><a href="#">logged in as {{request.user.username}}</a></li>
+								{% else %}
+								<li><a href="{% url 'user_auth:login_page' %}">Login</a></li>
+			  					<li><a href="{% url 'user_auth:signup_page' %}">Sign up</a></li>
+								{% endif %}
 			  				</ul>			
 			  			</div>
 			  			<div class="col-lg-6 col-sm-6 col-6 header-top-right">
