--- a/templates/user_template/login.html
+++ b/templates/user_template/login.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-        <p> {{msg}}</p>
-</body>
-</html>
+<section class="vh-100" style="background-color: #508bfc;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card shadow-2-strong" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <h3 class="mb-5">Login</h3>
+            <form method="post" > <!-- action="{% url 'user_auth:login_page' %}" -->
+              {% csrf_token %}
+            <div class="form-outline mb-4">
+              <input type="text" name="username" class="form-control form-control-lg" required autofocus />
+              <label class="form-label" for="username">Username</label>
+            </div>
+
+            <div class="form-outline mb-4" method="post" >
+              <input type="password" name="password" class="form-control form-control-lg" required />
+              <label class="form-label" for="password">Password</label>
+            </div>
+
+            <!-- Checkbox -->
+            <div class="form-check d-flex justify-content-start mb-4">
+              <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+              <label class="form-check-label" for="form1Example3"> Remember password </label>
+            </div>
+
+            <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+            </form>
+            <hr class="my-4">
+
+            <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;"
+              type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
+            <button class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #3b5998;"
+              type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
