--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -137,6 +137,10 @@
 								<form method="post" action="{% url 'blog_show:single_blog' pid=post_obj.id %}" >
 									{% csrf_token %}
 									<input type="hidden" name="intended_post" value={{post_obj.id}}>
+									{% if request.user.is_authenticated %}
+									<input type="hidden" name="name" value={{request.user.first_name}}>
+									<input type="hidden" name="email" value={{request.user.email}}>
+									{% else %}
 									<div class="form-group form-inline">
 									  <div class="form-group col-lg-6 col-md-12 name">
 									    <input type="text" class="form-control" name="name" placeholder="Enter Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Name'">
@@ -145,6 +149,7 @@
 									    <input type="email" class="form-control" name="email" placeholder="Enter email address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'">
 									  </div>										
 									</div>
+									{% endif %}
 									<div class="form-group">
 										<input type="text" class="form-control" name="subject" placeholder="Subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Subject'">
 									</div>
