--- a/templates/user_template/login.html
+++ b/templates/user_template/login.html
@@ -20,7 +20,7 @@
                 <!-- <img src="./assets/img/bsb-logo.svg" alt="BootstrapBrain Logo" width="175" height="57"> -->
               </a>
             </div>
-            <!-- #پیام جهت صحت اطلاعات ورودی -->
+            <!-- پیام جهت صحت اطلاعات ورودی -->
             <h6 class="text-center mb-4">
               {% if messages %}
               {% for message in messages %}
@@ -59,8 +59,8 @@
           </div>
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
-              <form method="post" action="{%url 'user_auth:login_page'%}">
-                {%csrf_token%}
+              <form method="post" action="{% url 'user_auth:login_page' %}">
+                {% csrf_token %}
                 <!-- <p class="text-center mb-4">Or sign in using email</p> -->
                 <div class="row gy-3 overflow-hidden">
                   <div class="col-12">
@@ -94,8 +94,8 @@
             </div>
           </div>
           <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-4">
-            <a href="{%url 'user_auth:signup_page'%}" class="link-secondary text-decoration-none">Create new account</a>
-            <a href="{% url 'user_auth:forgot_page'%}" class="link-secondary text-decoration-none">Forgot password</a>
+            <a href="{% url 'user_auth:signup_page' %}" class="link-secondary text-decoration-none">Create new account</a>
+            <a href="{% url 'user_auth:forgot_page' %}" class="link-secondary text-decoration-none">Forgot password</a>
 
           </div>
         </div>
