--- a/templates/user_template/password_reset_email.html
+++ b/templates/user_template/password_reset_email.html
@@ -2,7 +2,7 @@
 
         <p>You're receiving this email because you requested a password reset for your user account at {{domain}}/</p>
 
-        <p>Please click the following link to reset your password:</p>
+        <p>Please click the following link to reset your password for </p>
 
         <p><a href="http://{{ domain }}{% url 'user_auth:password_reset_confirm' uidb64=uid token=token %}">Reset Password</a></p>
 
