--- a/templates/user_template/password_reset_confirm.html
+++ b/templates/user_template/password_reset_confirm.html
@@ -31,6 +31,7 @@
               </a> -->
             </div>
           </div>
+
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
               <form method="post" action="{% url 'user_auth:password_reset_complete' %}">
@@ -57,9 +58,11 @@
                     </div>
                   </div>
                 </div>
+               </div>
               </form>
             </div>
           </div>
+
           <div class="d-flex gap-2 gap-md-4 flex-column flex-md-row justify-content-md-center mt-4">
           </div>
         </div>
