--- a/templates/blog_items/blog-single.html
+++ b/templates/blog_items/blog-single.html
@@ -113,7 +113,7 @@
                                                 <img src="{% static 'img/blog/c1.jpg' %}" alt="">
                                             </div>
                                             <div class="desc">
-                                                <h5><a href="#">{{comment.name}}</a></h5>
+                                                <h5>{{comment.name}}</h5>
                                                 <p class="date">{{comment.created_date|naturalday}}</p>
                                                 <p class="comment">
 													{{comment.message}}
