--- a/templates/user_template/password_reset_complete.html
+++ b/templates/user_template/password_reset_complete.html
@@ -23,7 +23,7 @@
           </div>
           <div class="card border border-light-subtle rounded-4">
             <div class="card-body p-3 p-md-4 p-xl-5">
-              <form method="post" action="#">
+              <form>
                 {% csrf_token %}
                 <div class="row gy-3 overflow-hidden">
                   <div class="col-12">
